# wyoming_bluetts

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  Dockerfile  Dockerfile.alpine  Dockerfile.cloning  LICENSE  README.md  build.yaml  config.yaml  docker-compose.yml  pyproject.toml  repository.yaml  run.sh
.github/scripts/: smoke_test.py
.github/workflows/: job-docker.yml  job-prek.yml  job-test.yml  on-merge.yml
alpine/espeakng_loader/: __init__.py
tests/: conftest.py  test_handler.py  test_models.py  test_probe.py  test_versions.py
translations/: en.yaml
wyoming_bluetts/: __init__.py  __main__.py  handler.py  models.py  probe.py  vocab.json
wyoming_bluetts/voices/: female1.json  male1.json
