[project]
name = "wyoming-bluetts"
version = "0.1.0"
description = "Wyoming protocol server for BlueTTS: local, multilingual, ONNX text-to-speech with zero-shot voice cloning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Janne Snabb" }
]
keywords = ["wyoming", "tts", "voice", "bluetts", "blue-onnx", "home-assistant", "onnx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "wyoming>=1.7.0",
    "blue-onnx",
    "numpy>=1.24.0",
    "huggingface-hub>=0.26.0",
    # Pin a floor for librosa's numba/llvmlite transitive deps: without this,
    # uv's resolver can pick an ancient numba (e.g. 0.53.1) that only supports
    # Python <3.10 and fails to build here.
    "numba>=0.59.0",
]

# The published blue-onnx==0.2.4 wheel on PyPI is missing vocab.json (crashes on
# load) and predates the blue_onnx.style voice-cloning module entirely -- both
# are only fixed on BlueTTS's git main. Pinned to an exact commit for
# reproducibility; switch back to a plain PyPI version constraint once a fixed
# release is published (see AGENTS.md).
[tool.uv.sources]
blue-onnx = { git = "https://github.com/maxmelichov/BlueTTS.git", rev = "f071b9100e15c24575f6e2919312f67057c7b589" }

[project.optional-dependencies]
dev = [
    "ruff>=0.15.4",
    "prek>=0.3.4",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ty>=0.0.19",
]

[project.scripts]
wyoming-bluetts = "wyoming_bluetts.__main__:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wyoming_bluetts*"]

[tool.setuptools.package-data]
wyoming_bluetts = ["voices/*.json", "vocab.json"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.isort]
profile = "black"
src_paths = "tests"
line_length = 80
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
select = ["E", "F", "B"]
exclude = ["__pycache__", ".git", ".venv"]
ignore = ["E501"]
